<?xml version="1.0"?>
<package format="2">
  <name>ccom_planner</name>
  <version>0.0.0</version>
  <description>A project11_navigation planner for Dubins vehicles based on A*</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>behaviortree_cpp</depend>
  <depend>dubins_curves</depend>
  <depend>pluginlib</depend>
  <depend>project11_navigation</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  
  <export>
    <project11_navigation plugin="${prefix}/plugin.xml" />
    <behaviortree_cpp bt_lib_plugin="libccom_planner_bt_plugin"/>
  </export>
</package>
